--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 100vh;
+  background-attachment: fixed;
+  height: 100%;
+  min-height: 100vh;
   width: 100vw;
 }
