--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
+  background-color: rgba(0, 0, 0, 0.5);
+  background-blend-mode: darken;
   height: 100%;
   min-height: 100vh;
   width: 100vw;
